--- a/public/css/main.css
+++ b/public/css/main.css
@@ -315,3 +315,9 @@ a {
 .text-right{
 	text-align:right;
 }
+
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
