--- a/views/home.html
+++ b/views/home.html
@@ -144,6 +144,15 @@
 			font-weight: normal;
 			font-style: normal;
 		}
+		@font-face {
+			font-family: 'hanyitexidengxianj';
+			src: url('fonts/hytexidengxianj.eot');
+			src: url('fonts/hytexidengxianj.eot?#iefix') format('embedded-opentype'),
+			url('fonts/hytexidengxianj.woff') format('woff'),
+			url('fonts/hytexidengxianj.ttf') format('truetype'),
+			url('fonts/hytexidengxianj.svg#teague-icons') format('svg');
+			font-style: normal;
+		}
 		</style>
 		<style>
 		@-webkit-keyframes loading
@@ -217,6 +226,7 @@
 				.nav a span {
 					border-bottom: 2px solid #fff;
 					margin-bottom: 1px;
+					font-family:'Din-Light';
 				}
 		.subnav {
 			position: relative;
@@ -278,6 +288,7 @@
 				.subnav__div a span {
 					border-bottom: 0;
 					font-size:12px;
+					font-family:'Din-Light';
 				}
 		 .module-overlay{
 			position: absolute;
@@ -662,6 +673,7 @@
 		}
 
 		.ch-info p {
+			font-family:'hanyitexidengxianj';
 			color: rgb(86,194,222);
 			padding: 0;
 			margin: 0 0 0 40px;
@@ -1002,7 +1014,7 @@
 						<li class="subnav">
 							<a class="subnav__top-most" href="javascript:;"><span>Works</span></a>
 							<div class="subnav__div">
-								<a href="/everything"><span>News</span></a>
+								<a href="/news"><span>News</span></a>
 								<a href="javascript:;"><span>Showcase</span></a>
 							</div>
 						</li>
