--- a/views/news.html
+++ b/views/news.html
@@ -145,14 +145,12 @@
 			font-style: normal;
 		}
 		@font-face {
-			font-family: 'DINCond-Light';
-			src: url('fonts/dincond-light.eot');
-			src: url('fonts/dincond-light.eot?#iefix') format('embedded-opentype'),
-			url('fonts/dincond-light.woff') format('woff'),
-			url('fonts/dincond-light.ttf') format('truetype'),
-			url('fonts/dincond-light.svg#DINLight') format('svg'),
-			url('fonts/dincond-light.otf') format('otf');
-			font-weight: normal;
+			font-family: 'hanyitexidengxianj';
+			src: url('fonts/hytexidengxianj.eot');
+			src: url('fonts/hytexidengxianj.eot?#iefix') format('embedded-opentype'),
+			url('fonts/hytexidengxianj.woff') format('woff'),
+			url('fonts/hytexidengxianj.ttf') format('truetype'),
+			url('fonts/hytexidengxianj.svg#teague-icons') format('svg');
 			font-style: normal;
 		}
 		</style>
@@ -221,7 +219,8 @@
 				color:white;
 			}
 				.nav a span {
-					border-bottom: 2px solid #fff;
+					border-bottom: 2px solid #56c2de;
+					color:#56c2de;
 					margin-bottom: 1px;
 					font-family:'Din-Light';
 				}
@@ -323,45 +322,7 @@
 				 letter-spacing: .02em;
 			}
 		</style>
-		<style>
-		.career{
-			padding:0 40px;
-		}
-		.career .title{
-			font-size:35px;
-			font-family:'DINCond-Light','Din-Light',Din-LightAlternate;
-			text-transform:uppercase;
-			font-weight:300;
-			border-bottom:2px solid #5dc3df;
-			float:left;
-		}
-		.career >article > .jobs{
-			margin:0;
-			padding:0;
-			float:none;
-			clear:both;
-			overflow:hidden;
-		}
-		.career >article > .jobs li{
-			float:left;
-			display:inline-block;
-			list-style:none;
-			margin-right:48px;
-			font-family:STXIHEI,'华文细黑';
-			font-size:16px;
-		}
-		.career > article > p{
-			font-family:STXIHEI,'华文细黑';
-			font-size:12px;
-		}
-		.career > article > p.blue,
-		.career > article > p.blue a{
-			color:#5dc3df;
-			margin: 30px 0;
-			font-family:'STXIHEI','华文细黑';
-		}
-			
-		</style>
+		
 		<style>
 		@media only screen and (max-width:825px){
 			.page-width{width:320px!important;margin:auto;}
@@ -372,14 +333,14 @@
 				margin:auto;
 			}
 			.home-banner{
-				background-image: url(img/career-820.png);
+				background-image: url(img/news-820.png);
 				background-image: -webkit-image-set(
-				  url(img/career-820.png) 1x,
-				  url(img/career-820 2x.png) 2x
+				  url(img/news-820.png) 1x,
+				  url(img/news-820 2x.png) 2x
 				);
 				background-image: image-set(
-				  url(img/career-820.png) 1x,
-				  url(img/career-820 2x.png) 2x
+				  url(img/news-820.png) 1x,
+				  url(img/news-820 2x.png) 2x
 				);
 				background-repeat:no-repeat;
 				background-size:100% auto;
@@ -395,14 +356,14 @@
 				margin:auto;
 			}
 			.home-banner{
-				background-image: url(img/career-820.png);
+				background-image: url(img/news-820.png);
 				background-image: -webkit-image-set(
-				  url(img/career-820.png) 1x,
-				  url(img/career-820 2x.png) 2x
+				  url(img/news-820.png) 1x,
+				  url(img/news-820 2x.png) 2x
 				);
 				background-image: image-set(
-				  url(img/career-820.png) 1x,
-				  url(img/career-820 2x.png) 2x
+				  url(img/news-820.png) 1x,
+				  url(img/news-820 2x.png) 2x
 				);
 				background-repeat:no-repeat;
 				width:820px;
@@ -432,14 +393,14 @@
 				line-height: 1.14em;
 			}
 			.home-banner{
-				background-image: url(img/career-1095.png);
+				background-image: url(img/news-1095.png);
 				background-image: -webkit-image-set(
-				  url(img/career-1095.png) 1x,
-				  url(img/career-1095 2x.png) 2x
+				  url(img/news-1095.png) 1x,
+				  url(img/news-1095 2x.png) 2x
 				);
 				background-image: image-set(
-				  url(img/career-1095.png) 1x,
-				  url(img/career-1095 2x.png) 2x
+				  url(img/news-1095.png) 1x,
+				  url(img/news-1095 2x.png) 2x
 				);
 				background-repeat:no-repeat;
 				width:1095px;
@@ -456,14 +417,14 @@
 				margin:auto;
 			}
 			.home-banner{
-				background-image: url(img/career-1370.png);
+				background-image: url(img/news-1370.png);
 				background-image: -webkit-image-set(
-				  url(img/career-1370.png) 1x,
-				  url(img/career-1370 2x.png) 2x
+				  url(img/news-1370.png) 1x,
+				  url(img/news-1370 2x.png) 2x
 				);
 				background-image: image-set(
-				  url(img/career-1370.png) 1x,
-				  url(img/career-1370 2x.png) 2x
+				  url(img/news-1370.png) 1x,
+				  url(img/news-1370 2x.png) 2x
 				);
 				background-repeat:no-repeat;
 				width:1370px;
@@ -489,14 +450,14 @@
 				margin:auto;
 			}
 			.home-banner{
-				background-image: url(img/career-1645.png);
+				background-image: url(img/news-1645.png);
 				background-image: -webkit-image-set(
-				  url(img/career-1645.png) 1x,
-				  url(img/career-1645 2x.png) 2x
+				  url(img/news-1645.png) 1x,
+				  url(img/news-1645 2x.png) 2x
 				);
 				background-image: image-set(
-				  url(img/career-1645.png) 1x,
-				  url(img/career-1645 2x.png) 2x
+				  url(img/news-1645.png) 1x,
+				  url(img/news-1645 2x.png) 2x
 				);
 				background-repeat:no-repeat;
 				width:1645px;
@@ -522,14 +483,14 @@
 				margin:auto;
 			}
 			.home-banner{
-				background-image: url(img/career-1645.png);
+				background-image: url(img/news-1645.png);
 				background-image: -webkit-image-set(
-				  url(img/career-1645.png) 1x,
-				  url(img/career-1645 2x.png) 2x
+				  url(img/news-1645.png) 1x,
+				  url(img/news-1645 2x.png) 2x
 				);
 				background-image: image-set(
-				  url(img/career-1645.png) 1x,
-				  url(img/career-1645 2x.png) 2x
+				  url(img/news-1645.png) 1x,
+				  url(img/news-1645 2x.png) 2x
 				);
 				background-repeat:no-repeat;
 				width:1645px;
@@ -546,6 +507,128 @@
 			}
 			
 		}
+		</style>
+		<style>
+	
+		nav.pagination ul {
+			margin:20px 0 0;
+			padding:0;
+			list-style:none;
+		}
+
+		nav.pagination ul li {
+			display:inline-block;
+		}
+
+		nav.pagination ul li + li {
+			margin-left:3px;
+		}
+		nav.pagination li a{
+			font-family:"Din-Light",serif;
+			color:#332d2b;
+			font-size:1.8em;
+			line-height:1em;
+			display:block;
+		}
+		nav.pagination li a.current{
+			border-bottom:2px solid #332d2b;
+		}
+		</style>
+		<style>
+		.back-to--top {
+			display: block;
+			width: 64px;
+			height: 64px;
+			margin: 80px auto;
+			background-color: #4d4846;
+			color: #fff;
+			position: relative;
+			overflow: hidden;
+			-webkit-border-radius: 32px;
+			-moz-border-radius: 32px;
+			-ms-border-radius: 32px;
+			-o-border-radius: 32px;
+			border-radius: 32px;
+			behavior: url(js/vendor/PIE.htc);
+		}
+		.hover-animate-up--span {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			text-align: center;
+			padding: 0 5px;
+			display: table;
+			-webkit-box-sizing: border-box;
+			-moz-box-sizing: border-box;
+			box-sizing: border-box;
+			text-transform: uppercase;
+		}
+		
+		
+		.hover-animate-up--span > i,
+		.hover-animate-up--span > span{
+			display:table-cell;
+			vertical-align:middle;
+			font-size:34px;
+		}
+		.hover-animate-up--span > span{
+			font-size:11px;
+			font-family:Din-Light;
+		}
+		[class^=icon-],
+		.icon {
+			font-family: teague-icons;
+			line-height: 1;
+			speak: none;
+			font-style: normal!important;
+			font-weight: 400;
+			font-variant: normal;
+			text-transform: none;
+			-webkit-font-smoothing: antialiased;
+			display: -moz-inline-stack;
+			display: inline-block;
+			vertical-align: middle;
+			zoom: 1;
+		}
+		.icon-arrow-up:before {
+			content: "\e010";
+			font-size:34px;
+			font-family:teague-icons;
+		}
+		.hover-animate-up--span:nth-child(2){
+			top:200px;
+		}
+		</style>
+		<style>
+		.news-detail,.news-list{
+			width:80%;
+			margin:30px auto;
+		}
+			.news-detail  h2{
+				font-family:hanyitexidengxianj;
+				color:#595857;
+			}
+			.news-detail .pubdate{
+				font-family:Din-Light,serif;
+				color:#595857;
+			}
+			.news-detail p{
+				font-family:STXIHEI,'华文细黑';
+				color:#595857;
+			}
+			.news-list,
+			.news-list li,
+			.news-list li a,
+			.news-list li span,
+			.news-list h3{
+				font-family:STXIHEI,'华文细黑';
+				color:#595857;
+			}
+			.news-list h3{
+				border-bottom:1px solid #231916;
+			}
 		</style>
     </head>
 	<body>
@@ -567,15 +650,15 @@
 					<ul id="js-main-nav" class="nav">
 						<li class="subnav"><a href="javascript:void(0);"><span>About</span></a>
 							<div class="subnav__div">
-								<a href="javascript:;"><span>Career</span></a>
-								<a href="contact.html"><span>Contact</span></a>
+								<a href="/career"><span>Career</span></a>
+								<a href="/contact"><span>Contact</span></a>
 							</div>
 						</li>
 						<li class="subnav">
 							<a class="subnav__top-most" href="javascript:;"><span>Works</span></a>
 							<div class="subnav__div">
-								<a href="news.html"><span>News</span></a>
-								<a href="showcase.html"><span>Showcase</span></a>
+								<a href="javascript:;"><span>News</span></a>
+								<a href="/showcase"><span>Showcase</span></a>
 							</div>
 						</li>
 					</ul>
@@ -588,52 +671,78 @@
 					
 		<div class="main">
 			<div class="page-width">
-				<ul class="heading--feature">
+				<!-- <ul class="heading--feature">
 					<li>vision</li>
 					<li>design.</li>
 					<li>photography</li>
 					<li>product.</li>
-				</ul>
+				</ul> -->
 			</div>
 			<div class="module-overlay">
-				<div class="module-overlay-cover"></div>
+				<!-- <div class="module-overlay-cover"></div> -->
 			</div>
 			<div class="home-banner"></div>
 			
 			
 			<div class="clearfix"></div>
-			
-			<div class="career page-width">
-
-				<h1 class="title">career</h1>
-				<div class="clearfix"></div>
-				<article>
-					<ul class="jobs">
-						<li>平面设计师</li>
-						<li>产品设计师</li>
-					</ul>
-					<p>
-						我们招募对喜爱设计,热爱生活的平面/产品设计师: <br />
-						如果你娴熟使用Photoshop、illustrator,或者擅长CAD,FLASH,3DMAX等设计软件...<br /> 
-						如果你拥有给力的排版能力..<br /> 
-						如果你手绘能力出众,色彩感强烈,喜爱绘画并擅长手绘板以及后期上色...<br /> 
-						如果你熟悉产品/包装设计并对材质熟悉..<br />
-						如果你喜欢创意,乐于不断创新..<br /> 
-						如果你对时尚及传统文化有着特别的认识,并可以将两种理念融合进产品设计中...<br />
-						如果你喜欢沟通客户,能快速理解客户的设计需求并能独立策划方案..<br />
-						如果你不断学习,吃苦耐劳,享受团队协作的成果..<br />
-						如果你具备以上多条,我们欢迎你向我们投递简历.
-					</p>
-					<p class="blue">
-						<a href="mailto:hr@cyanrhino.com">发送个人简历及作品到：hr@cyanrhino.com</a>
-					</p>
-				</article>
+			<div class="container page-width">
+				<section class="news-detail">
+					<article>
+						<header>
+							<h2>
+								<time datetime="2014-10-26" pubdate="pubdate" class="pubdate">10/26</time>
+								参与中国工商银行私人银行部项目“亲历而不亲为”
+							</h2>
+							
+						</header>
+						<p>…</p>
+					</article>
+					<article>
+						<header>
+							<h2>
+								<time datetime="2014-12-18" pubdate="pubdate" class="pubdate">12/18</time>
+								参与中国工商银行私人银行部项目
+							</h2>
+							
+						</header>
+						<p>…</p>
+					</article>
+				</section>
+				<aside class="news-list">  
+					<h3>news</h3>
+					<ul>  
+						<li><a href="#"><span class="pubdate">2013.1.5</span>”灵活操控”我们由这几个字联想到的生活必备品——遥控器</a></li>
+						<li><a href="#"><span class="pubdate">2013.3.5</span>新式的遥控器造型现代，设计风格极尽最大人性化</a></li>
+						<li><a href="#"><span class="pubdate">2013.5.5</span>”灵活操控”我们由这几个字联想到的生活必备品——遥控器</a></li>
+					</ul>  
+				</aside>
 			</div>
+			<nav class='pagination page-width text-right' role='toolbar'>
+				<ul>
+					<li><a rel="prev" href="">&larr;</a></li>
+					<li><a rel="first" href="">1</a></li>
+					<li><a class="current" href="">2</a></li>
+					<li><a href="">3</a></li>
+					<li><a href="">4</a></li>
+					<li><a rel="last" href="">5</a></li>
+					<li><a rel="next" href="">&rarr;</a></li>
+				</ul>
+			</nav>
 			
 		
 		</div>
 		
-			
+		<div class="back-to">
+			<a href="#" class="back-to--top">
+				<span class="hover-animate-up--span">
+					<!-- <i class="fa fa-arrow-up"></i> -->
+					<span class="icon icon-arrow-up"></span>
+				</span>
+				<span class="hover-animate-up--span">
+					<span>Return To Top</span>
+				</span>
+			</a>
+		</div>
 	
 
     
@@ -655,7 +764,13 @@
 					$('.subnav__div').removeClass('hover');
 				});
 				
-				
+				$('.back-to--top').hover(function() {
+					$(this).find(".hover-animate-up--span:first").clearQueue().stop().animate({top: "-100px"}, {duration: 400});
+					$(this).find(".hover-animate-up--span:last").clearQueue().stop().delay(400).animate({top: "0px"}, {duration: 750});
+				}, function() {
+					$(this).find(".hover-animate-up--span:first").clearQueue().stop().animate({top: "0px"}, {duration: 500});
+					$(this).find(".hover-animate-up--span:last").clearQueue().stop().animate({top: "200px"}, {duration: 500});
+				});
 			
 				
 			});
