--- a/views/home.html
+++ b/views/home.html
@@ -1068,7 +1068,7 @@
 				<div class="item big" data-num="1" style="background-image:url(img/foto/twothird.png);">
 					<div class="ch-info">
 						<div class="ch-info-back">
-							<a href="#">
+							<a href="/showcase/twothird">
 								<span>showcase</span>
 								<h3>da yuan</h3>
 								<p>九华大愿 <i class="fa fa-caret-right"></i></p>
@@ -1079,7 +1079,7 @@
 				<div class="item" data-num="2" style="background-image:url(img/foto/onethird.png);">
 					<div class="ch-info">
 						<div class="ch-info-back">
-							<a href="#">
+							<a href="/showcase/onethird">
 								<span>showcase</span>
 								<h3>da yuan</h3>
 								<p>九华大愿 <i class="fa fa-caret-right"></i></p>
@@ -1090,7 +1090,7 @@
 				<div class="item" data-num="3" style="background-image:url(img/foto/onethird.png);">
 					<div class="ch-info">
 						<div class="ch-info-back">
-							<a href="#">
+							<a href="/showcase/onethird">
 								<span>showcase</span>
 								<h3>da yuan</h3>
 								<p>九华大愿 <i class="fa fa-caret-right"></i></p>
@@ -1101,7 +1101,7 @@
 				<div class="item big" data-num="4" style="background-image:url(img/foto/twothird.png);">
 					<div class="ch-info">
 						<div class="ch-info-back">
-							<a href="#">
+							<a href="/showcase/twothird">
 								<span>showcase</span>
 								<h3>da yuan</h3>
 								<p>九华大愿 <i class="fa fa-caret-right"></i></p>
@@ -1134,7 +1134,7 @@
 				<div class="item full" data-num="7" style="background-image:url(img/foto/full_1.png);">
 					<div class="ch-info">
 						<div class="ch-info-back">
-							<a href="#">
+							<a href="/showcase/full_1">
 								<span>showcase</span>
 								<h3>da yuan</h3>
 								<p>九华大愿 <i class="fa fa-caret-right"></i></p>
@@ -1145,7 +1145,7 @@
 				<div class="item big" data-num="8" style="background-image:url(img/foto/twothird.png);">
 					<div class="ch-info">
 						<div class="ch-info-back">
-							<a href="#">
+							<a href="/showcase/twothird">
 								<span>showcase</span>
 								<h3>da yuan</h3>
 								<p>九华大愿 <i class="fa fa-caret-right"></i></p>
