add social login

--- a/views/backend/login.html
+++ b/views/backend/login.html
@@ -67,7 +67,7 @@
 			<p>
 				<input type="password" id="password" name="password" placeholder="Password" class="{validate: {required: true}}" />
 			</p>
-			<button type="submit" class="button blue"><span class="glyph key"></span>登录</button>
+			<button type="submit" class="button blue"><span class="glyph key"></span>登录</button> <a href="/auth/qq"><img src="http://qzonestyle.gtimg.cn/qzone/vas/opensns/res/img/Connect_logo_7.png"/></a> <a href="/auth/facebook">Login via Facebook</a> <a href="/auth/twitter">Login via Twitter</a> <a href="/auth/github">Login via Github</a> <a href="/auth/Google">Login via Google</a>
 			</form>
 		</div>
 	</div>
