--- a/views/backend/dashboard.html
+++ b/views/backend/dashboard.html
@@ -61,7 +61,7 @@
 		<nav id="primary">
 			<ul>
 				<li class="active">
-					<a href="dashboard.html">
+					<a href="javascript:;">
 						<span class="glyph dashboard"></span>
 						控制台
 					</a>
@@ -214,22 +214,22 @@
 				
 				<div id="quickpost" class="box">
 					<div class="box-header">
-						<h1>Let's make it a quickie</h1>
+						<h1>新增文章</h1>
 					</div>
 					
 					<div class="box-content">
 						<form method="post" action="#">
 							<p>
-								<input type="text" name="title" id="title" placeholder="Title" />
+								<input type="text" name="title" id="title" placeholder="文章标题" />
 							</p>
 							
 							<p>
-								<textarea id="bodytext" name="bodytext" placeholder="Place your message to the world here..."></textarea>
+								<textarea id="bodytext" name="bodytext" placeholder="文章内容..."></textarea>
 							</p>
 							
 							<div class="action_bar">
-								<input type="submit" class="button blue" value="Post it!" />
-								<a href="#" class="close button">Cancel</a>
+								<input type="submit" class="button blue" value="发布" />
+								<a href="#" class="close button">取消</a>
 							</div>
 						</form>
 					</div>
