--- a/views/backend/dashboard.html
+++ b/views/backend/dashboard.html
@@ -79,13 +79,13 @@
 					</a>
 				</li>
 				<li>
-					<a href="tables/tables.html">
+					<a href="news/list">
 						<span class="glyph listicon"></span>
 						新闻管理
 					</a>
 				</li>
 				<li>
-					<a href="charts/linechart.html">
+					<a href="https://www.google.com/analytics/web/#home/a40133822w69229745p71305695/">
 						<span class="glyph chart"></span>
 						统计
 					</a>
@@ -102,8 +102,8 @@
 		<!-- Secondary navigation -->
 		<nav id="secondary">
 			<ul>
-				<li class="active"><a href="#">控制台</a></li>
-				<li><a href="#">用户管理</a></li>
+				<li class="active"><a href="javascript:;">控制台</a></li>
+				<li><a href="users">用户管理</a></li>
 				<li><a href="#">系统日志</a></li>
 			</ul>
 			
