refactor login info

--- a/views/backend/edit.html
+++ b/views/backend/edit.html
@@ -103,7 +103,7 @@
 	<!-- Secondary navigation -->
 	<nav id="secondary">
 		<ul>
-			<li><a href="news/list">新闻列表页</a></li>
+			<li><a href="list">新闻列表页</a></li>
 			<li class="active"><a href="javascript:;">新增文章（高级）</a></li>
 		</ul>
 
