--- a/views/backend/gallery.html
+++ b/views/backend/gallery.html
@@ -5,7 +5,7 @@
 	<style>
 	.toolbar { margin: 0; list-style: none; padding: 0; }
 	.toolbar li { display: block; float: left; position: relative; }
-	.toolbar li a { -o-border-radius: 0; -ms-border-radius: 0; -moz-border-radius: 0; -webkit-border-radius: 0; border-radius: 0; display: block; padding: 4px 9px; }
+	.toolbar li a { -o-border-radius: 0; -ms-border-radius: 0; -moz-border-radius: 0; -webkit-border-radius: 0; border-radius: 0; display: block; padding: 4px 9px; text-decoration:none;}
 	.toolbar li:not(:first-child) { margin-left: -1px; }
 	.toolbar li:first-child a { border-radius: 2px 0 0 2px; }
 	.toolbar li:last-child a { border-radius: 0 2px 2px 0; }
@@ -115,8 +115,8 @@
 			</ul>
 		</div>
 		<ul id="media" class="display-inline leading clearfix">
-			<li class="architecture"><a href="media/architecture/madness_arch1.jpg" rel="#overlay">
-				<img src="media/thumbs/architecture/madness_arch1.jpg" alt="" /></a></li>
+			<li class="architecture"><a href="/uploads/snapshot.png" rel="#overlay">
+				<img src="/uploads/snapshot.png" alt="" /></a></li>
 			<li class="architecture"><a href="media/architecture/madness_arch2.jpg" rel="#overlay">
 				<img src="media/thumbs/architecture/madness_arch2.jpg" alt="" /></a></li>
 			<li class="architecture"><a href="media/architecture/madness_arch3.jpg" rel="#overlay">
