--- a/views/backend/news.html
+++ b/views/backend/news.html
@@ -89,7 +89,7 @@
 								<td><%=list[i].author%></td>
 
 								<td>
-									<a href="#" class="button plain">编辑</a>
+									<a href="news/update/<%= list[i]._id%>" class="button plain">编辑</a>
 									<a href="#confirm" class="button plain modal">删除</a>
 								</td>
 							</tr>
