--- a/views/backend/foto.html
+++ b/views/backend/foto.html
@@ -2,6 +2,138 @@
 	<% include meta.ejs %>
 	
 	<title>CyanRhino Backend System</title>
+	<style>
+	progress[value] {
+		appearance: none;
+		border: none;
+		width: 100%; 
+		height: 10px;
+		background-color: whiteSmoke;
+		border-radius: 2px;
+		box-shadow: 0 2px 3px rgba(0,0,0,.5) inset;
+		color: royalblue;
+		position: relative;
+		margin: 0 0 1.5em; 
+	}
+	progress[value]::-webkit-progress-bar {
+		background-color: whiteSmoke;
+		border-radius: 3px;
+		box-shadow: 0 2px 3px rgba(0,0,0,.5) inset;
+	}
+	progress[value]::-webkit-progress-value {
+		position: relative;
+		background-size: 35px 20px, 100% 100%, 100% 100%;
+		border-radius:3px;
+		animation: animate-stripes 5s linear infinite;
+	}
+	@keyframes animate-stripes { 
+		100% { 
+			background-position: -100px 0; 
+		} 
+	}
+	progress[value]::-webkit-progress-value:after {
+		content: '';
+		position: absolute;	
+		width:5px; 
+		height:5px;
+		top:2px; 
+		right:7px;
+		background-color: white;
+		border-radius: 100%;
+	}
+	progress[value]::-moz-progress-bar {
+		background-image:
+			-moz-linear-gradient( 135deg,
+				transparent,
+				transparent 33%,
+				rgba(0,0,0,.1) 33%,
+				rgba(0,0,0,.1) 66%,
+				transparent 66%),
+			-moz-linear-gradient( top,
+				rgba(255, 255, 255, .25),
+				rgba(0,0,0,.2)),
+			-moz-linear-gradient( left, #09c, #f44);
+				background-size: 35px 20px, 100% 100%, 100% 100%;
+				border-radius:3px;
+
+	}
+	.progress-bar {
+		background-color: whiteSmoke;
+		border-radius: 3px;
+		box-shadow: 0 2px 3px rgba(0,0,0,.5) inset;
+		width: 100%; 
+		height:20px;
+	}
+		.progress-bar span {
+			background-color: royalblue;
+			border-radius: 3px;	
+			display: block;
+			text-indent: -9999px;
+		}
+
+	p[data-value] { 
+		position: relative; 
+	}
+	p[data-value]:after {
+		content: attr(data-value) '%';
+		position: absolute; 
+		right:0;
+	}
+
+	.mid::-webkit-progress-value{
+		background-image:
+		-webkit-linear-gradient( 135deg,
+			transparent,
+			transparent 33%,
+			rgba(0,0,0,.1) 33%,
+			rgba(0,0,0,.1) 66%,
+			transparent 66%),
+		-webkit-linear-gradient( top,
+			rgba(255, 255, 255, .25),
+			rgba(0,0,0,.2)),
+		-webkit-linear-gradient( left, #09c, #ff0);
+	}
+
+	.mid::-moz-progress-bar {
+		background-image:
+			-moz-linear-gradient( 135deg,
+				transparent,
+				transparent 33%,
+				rgba(0,0,0,.1) 33%,
+				rgba(0,0,0,.1) 66%,
+				transparent 66%),
+			-moz-linear-gradient( top,
+				rgba(255, 255, 255, .25),
+				rgba(0,0,0,.2)),
+			-moz-linear-gradient( left, #09c, #ff0);
+	}
+	.high::-moz-progress-bar{
+		background-image:
+		-moz-linear-gradient( 135deg,
+			transparent,
+			transparent 33%,
+			rgba(0,0,0,.1) 33%,
+			rgba(0,0,0,.1) 66%,
+			transparent 66%),
+		-moz-linear-gradient( top,
+			rgba(255, 255, 255, .25),
+			rgba(0,0,0,.2)),
+		-moz-linear-gradient( left, #09c, #f44);
+	}
+	.high::-webkit-progress-value{
+		background-image:
+		-webkit-linear-gradient( 135deg,
+			transparent,
+			transparent 33%,
+			rgba(0,0,0,.1) 33%,
+			rgba(0,0,0,.1) 66%,
+			transparent 66%),
+		-webkit-linear-gradient( top,
+			rgba(255, 255, 255, .25),
+			rgba(0,0,0,.2)),
+		-webkit-linear-gradient( left, #09c, #f44);
+	}
+	</style>
 </head>
 
 <body>
@@ -76,22 +208,24 @@
 				</div>
 
 				<div class="box-content">
-					<form method="get" action="../wizard.html">
+					<form method="post" action="../wizard.html" enctype="multipart/form-data">
 					<div class="tab-content" id="step1">
 						<p>
-							<input type="file" id="file" name="file" placeholder="请选择图片" />
+							<input type="file" id="files" name="files[]" placeholder="请选择图片" multiple required="required"  class="{validate: {required: true}}" />							
 						</p>
+						<progress max="100" value="0" class="percent"></progress>
 						
 					</div>
 					
 					<div class="tab-content" id="step2">
-						<div class="container">
+						<div class="container">				
 							<div class="contr">
 								<button onclick="getResults()">Crop</button>
 							</div>
-							<canvas id="panel" width="779" height="519"></canvas>
+							<output id="list"></output>
+							<!-- <canvas id="panel" width="779" height="519"></canvas> -->
 							<div id="results">
-								<h2>请根据1/3, 2/3, 1/2以及全尺寸进行裁切</h2>
+								<p>请根据1/3, 2/3, 1/2以及全尺寸进行裁切</p>
 								<img id="crop_result" />
 							</div>
 						</div>
@@ -111,6 +245,119 @@
 	</section>
 	
 	<% include js.ejs %>
+	
+	<script>
+	// Check for the various File API support.
+	if (window.File && window.FileReader && window.FileList && window.Blob) {
+		// Great success! All the File APIs are supported.
+	} else {
+		alert('当前浏览器不支持拖拽上传！');
+	}
+	</script>
+	
+	<script>
+	var progress = document.querySelector('.percent');
+	
+	function bytesToSize(bytes) {
+		var sizes = ['Bytes', 'KB', 'MB'];
+		if (bytes == 0) return 'n/a';
+		var i = parseInt(Math.floor(Math.log(bytes) / Math.log(1024)));
+		return (bytes / Math.pow(1024, i)).toFixed(1) + ' ' + sizes[i];
+	}
+	
+	function errorHandler(evt) {
+		switch(evt.target.error.code) {
+		case evt.target.error.NOT_FOUND_ERR:
+			alert('File Not Found!');
+			break;
+		case evt.target.error.NOT_READABLE_ERR:
+			alert('File is not readable');
+			break;
+		case evt.target.error.ABORT_ERR:
+			break; // noop
+		default:
+			alert('An error occurred reading this file.');
+		};
+	}
+	
+	function updateProgress(evt) {
+		if (evt.lengthComputable) {
+			var percentLoaded = Math.round((evt.loaded / evt.total) * 100);
+			if (percentLoaded < 70) {
+				progress.value = percentLoaded;
+				progress.classList.remove('high');
+				progress.classList.add('mid');	
+			}
+			else  {
+				progress.value = percentLoaded;
+				progress.classList.remove('mid');
+				progress.classList.add('high');	
+			}
+		}
+	}
+
+	function handleFileSelect(evt) {
+		evt.stopPropagation();
+		evt.preventDefault();
+		
+		var files = evt.dataTransfer?evt.dataTransfer.files:evt.target.files; 
+		
+		var output = [];
+		for (var i = 0, f; f = files[i]; i++) {
+			if (!f.type.match('image.*')) {
+				continue;
+			}
+			
+			output.push(
+				'<li><strong>', 
+				escape(f.name), 
+				'</strong> (', 
+				f.type || 'n/a', 
+				') - ',
+				f.size, 
+				' bytes, last modified: ',
+				f.lastModifiedDate.toLocaleDateString(), 
+				'</li>'
+			);
+			
+			var reader = new FileReader();
+			reader.onerror = errorHandler;
+			reader.onprogress = updateProgress;
+			reader.onload = function(e) {
+				progress.value = 100;
+			}
+			reader.onload = (function(theFile) {
+				return function(e) {
+					var span = document.createElement('span');
+					span.innerHTML = [
+						'<img class="thumb" src="', 
+						e.target.result,
+						'" title="', 
+						escape(theFile.name) + ' ('+bytesToSize(theFile.size)+') ', 
+						'"/>'
+					].join('');
+					document.getElementById('list').insertBefore(span, null);
+				};
+			})(f);
+			reader.readAsDataURL(f);
+			//reader.readAsBinaryString(f);
+		}
+		
+		//document.getElementById('list').innerHTML = '<ul>' + output.join('') + '</ul>';
+	}
+	
+	function handleDragOver(evt) {
+		evt.stopPropagation();
+		evt.preventDefault();
+		evt.dataTransfer.dropEffect = 'copy'; 
+	}
+
+	document.getElementById('files').addEventListener('change', handleFileSelect, false);
+	document.getElementById('files').addEventListener('dragover', handleDragOver, false);
+	document.getElementById('files').addEventListener('drop', handleFileSelect, false);
+	</script>
+	
+	
 
 </body>
 
