unescape the ejs output

--- a/views/news.html
+++ b/views/news.html
@@ -697,7 +697,7 @@
 							
 						</header>
 						<p>
-							<%=list[list.length-i-1].content%>							
+							<%-list[list.length-i-1].content%>							
 						</p>
 					</article>
 					<%}%>					
