loading more on showcase, adjust backend gallery

--- a/views/backend/dashboard.html
+++ b/views/backend/dashboard.html
@@ -71,7 +71,7 @@
 						新增文章
 					</a>
 					
-					<a href="#">
+					<a href="/backend/gallery/add">
 						<span class="glyph export"></span>
 						上传图片
 					</a>
