--- a/public/backend/css/main.css
+++ b/public/backend/css/main.css
@@ -1410,3 +1410,15 @@ h6 {
 #rotatedevice {
   display: none;
 }
+
+
+::-webkit-scrollbar {
+	-webkit-appearance: none;
+	width: 7px
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 4px;
+	background-color: rgba(0,0,0,.5);
+	-webkit-box-shadow: 0 0 1px rgba(255,255,255,.5)
+}
