--- a/views/backend/foto.html
+++ b/views/backend/foto.html
@@ -2,6 +2,7 @@
 	<% include meta.ejs %>
 	
 	<title>CyanRhino Backend System</title>
+	<link rel="stylesheet" href="css/jquery.Jcrop.min.css" type="text/css" media="screen" title="no title" charset="utf-8">	
 	<style>
 	progress[value] {
 		appearance: none;
@@ -133,6 +134,11 @@
 			rgba(0,0,0,.2)),
 		-webkit-linear-gradient( left, #09c, #f44);
 	}
+	
+	.thumb{
+		max-width:100%;
+		width:100%;
+	}
 	</style>
 </head>
 
@@ -234,6 +240,14 @@
 						<progress max="100" value="0" class="percent"></progress>
 						<p>Fin.</p>
 						<div class="action_bar">
+							<input type="hidden" id="x1" name="x1" />
+							<input type="hidden" id="y1" name="y1" />
+							<input type="hidden" id="x2" name="x2" />
+							<input type="hidden" id="y2" name="y2" />
+							<input type="hidden" id="w" name="w" />
+							<input type="hidden" id="h" name="h" />
+							
+							
 							<input type="submit" name="submit" value="保存" class="button blue" />
 						</div>
 					</div>
@@ -245,6 +259,7 @@
 	</section>
 	
 	<% include js.ejs %>
+	<script src="js/jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
 	
 	<script>
 	// Check for the various File API support.
@@ -305,6 +320,7 @@
 		var output = [];
 		for (var i = 0, f; f = files[i]; i++) {
 			if (!f.type.match('image.*')) {
+				alert('请上传jpg,png,gif,tiff格式的图片文件');
 				continue;
 			}
 			
@@ -330,13 +346,41 @@
 				return function(e) {
 					var span = document.createElement('span');
 					span.innerHTML = [
-						'<img class="thumb" src="', 
+						'<img class="thumb" draggable="false" src="', 
 						e.target.result,
 						'" title="', 
 						escape(theFile.name) + ' ('+bytesToSize(theFile.size)+') ', 
-						'"/>'
+						'"/><br /><br />'
 					].join('');
 					document.getElementById('list').insertBefore(span, null);
+					$('.box-header ul li:eq(1)').trigger('click');
+					
+					
+					if (typeof jcrop_api != 'undefined') {
+						jcrop_api.destroy();
+						jcrop_api = null;
+					}
+					
+					setTimeout(function(){
+						$('.thumb').Jcrop({
+							minSize: [32, 362],
+							//aspectRatio : 1,
+							bgFade: true,
+							bgOpacity: .1,
+							onChange: updateInfo,
+							onSelect: updateInfo,
+							onRelease: clearInfo
+						}, function(){
+
+							// use the Jcrop API to get the real image size
+							var bounds = this.getBounds();
+							boundx = bounds[0];
+							boundy = bounds[1];
+
+							// Store the Jcrop API in the jcrop_api variable
+							jcrop_api = this;
+						});
+					},1000);
 				};
 			})(f);
 			reader.readAsDataURL(f);
@@ -345,7 +389,7 @@
 		
 		//document.getElementById('list').innerHTML = '<ul>' + output.join('') + '</ul>';
 		
-		$('.box-header ul li:eq(1)').trigger('click');
+		
 	}
 	
 	function handleDragOver(evt) {
@@ -379,7 +423,22 @@
 	document.getElementById('files').addEventListener('drop', handleFileSelect, false);
 	</script>
 	
+	<script>
+	var jcrop_api, boundx, boundy;
 	
+	function clearInfo() {
+	    $('#w').val('');
+	    $('#h').val('');
+	}
+	function updateInfo(e) {
+	    $('#x1').val(e.x);
+	    $('#y1').val(e.y);
+	    $('#x2').val(e.x2);
+	    $('#y2').val(e.y2);
+	    $('#w').val(e.w);
+	    $('#h').val(e.h);
+	}
+	</script>
 
 </body>
 
