--- a/views/backend/news.html
+++ b/views/backend/news.html
@@ -75,6 +75,7 @@
 						<tr>
 							<th>ID</th>
 							<th>Title</th>
+							<th>Category</th>
 							<th>PubDate</th>
 							<th>Author</th>
 							<th>Actions</th>
@@ -84,7 +85,8 @@
 						<% for(var i=0;list &&  i<list.length; i++) { %>
 							<tr>
 								<td><%= list[i]._id%></td>
-								<td><%= list[i].title %></td>								
+								<td><%= list[i].title %></td>
+								<td><%= list[i].category %></td>								
 								<td><%=new Date(list[i].postdate).toDateString()%></td>
 								<td><%=list[i].author%></td>
 
