--- a/public/backend/css/main.css
+++ b/public/backend/css/main.css
@@ -1422,3 +1422,10 @@ h6 {
 	background-color: rgba(0,0,0,.5);
 	-webkit-box-shadow: 0 0 1px rgba(255,255,255,.5)
 }
+
+.pull-right{
+	float:right;
+}
+.text-right{
+	text-align:right;
+}
