--- a/views/backend/foto.html
+++ b/views/backend/foto.html
@@ -137,7 +137,14 @@
 	
 	.thumb{
 		max-width:100%;
-		width:100%;
+		/*width:100%;*/
+	}
+	.previewWrapper{
+		width:272.655px;
+		height:90.5px;
+		overflow:hidden;
+		margin:20px 0 10px 0;
+		position:relative;
 	}
 	</style>
 </head>
@@ -214,19 +221,19 @@
 				</div>
 
 				<div class="box-content">
-					<form method="post" action="../wizard.html" enctype="multipart/form-data" id="upload_form">
+					<form method="post" action="/backend/upload" enctype="multipart/form-data" id="upload_form">
 					<div class="tab-content" id="step1">
 						<p>
-							<input type="file" id="files" name="files[]" placeholder="请选择图片" multiple required="required"  class="{validate: {required: true}}" />							
+							<input type="file" id="files" name="files[]" placeholder="请选择图片" multiple />							
 						</p>
 						
 					</div>
 					
 					<div class="tab-content" id="step2">
 						<div class="container">				
-							<div class="contr">
-								<button type="button" class="button">Crop</button>
-							</div>
+							<!-- <div class="contr">
+								<button type="button" class="button">Crop</button>								
+							</div> -->
 							<output id="list"></output>
 							<!-- <canvas id="panel" width="779" height="519"></canvas> -->
 							<div id="results">
@@ -234,21 +241,32 @@
 								<img id="crop_result" />
 							</div>
 						</div>
+						<div class="action_bar">
+							<!-- <input type="hidden" id="x1" name="x1" />
+							<input type="hidden" id="y1" name="y1" />
+							<input type="hidden" id="x2" name="x2" />
+							<input type="hidden" id="y2" name="y2" />
+							<input type="hidden" id="w" name="w" />
+							<input type="hidden" id="h" name="h" /> -->
+							
+							
+							<input type="submit" name="submit" value="裁切" class="button" />
+						</div>
 					</div>
 
 					<div class="tab-content" id="step3">
 						<progress max="100" value="0" class="percent"></progress>
 						<p>Fin.</p>
 						<div class="action_bar">
-							<input type="hidden" id="x1" name="x1" />
+							<!-- <input type="hidden" id="x1" name="x1" />
 							<input type="hidden" id="y1" name="y1" />
 							<input type="hidden" id="x2" name="x2" />
 							<input type="hidden" id="y2" name="y2" />
 							<input type="hidden" id="w" name="w" />
-							<input type="hidden" id="h" name="h" />
+							<input type="hidden" id="h" name="h" /> -->
 							
 							
-							<input type="submit" name="submit" value="保存" class="button blue" />
+							<input type="button" name="button" value="完成" class="button blue" />
 						</div>
 					</div>
 					</form>
@@ -318,6 +336,9 @@
 		var files = evt.dataTransfer?evt.dataTransfer.files:evt.target.files; 
 		
 		var output = [];
+		jcrop_api=[];
+		document.getElementById('list').innerHTML='';
+		
 		for (var i = 0, f; f = files[i]; i++) {
 			if (!f.type.match('image.*')) {
 				alert('请上传jpg,png,gif,tiff格式的图片文件');
@@ -342,47 +363,127 @@
 			reader.onload = function(e) {
 				progress.value = 100;
 			}
-			reader.onload = (function(theFile) {
+			reader.onload = (function(theFile,index) {
 				return function(e) {
-					var span = document.createElement('span');
+					var span = document.createElement('div');
+					var c = document.createAttribute("class");
+					c.nodeValue = "fotoWrapper";
+					span.setAttributeNode(c);
+					/**
+						full size
+					 */
 					span.innerHTML = [
-						'<img class="thumb" draggable="false" src="', 
+						'<div class="pull-right previewWrapper"><img src="'+e.target.result+'" id="preview'+index+'_full" /></div><div class="clearfix clear"></div>',
+						'<img class="thumb thumb'+index+'" draggable="false" src="', 
 						e.target.result,
 						'" title="', 
 						escape(theFile.name) + ' ('+bytesToSize(theFile.size)+') ', 
-						'"/><br /><br />'
+						'"/>'
 					].join('');
 					document.getElementById('list').insertBefore(span, null);
+					
+					
+					
+					/**
+						mid size
+					 */
+					span = document.createElement('div');
+					c = document.createAttribute("class");
+					c.nodeValue = "fotoWrapper";
+					span.setAttributeNode(c);
+					span.innerHTML = [
+						'<div class="pull-right previewWrapper"><img src="'+e.target.result+'" id="preview'+index+'_mid" /><div style="position:absolute; right:0; top:0; background:#999; width:50%; height:100%;"></div></div><div class="clearfix clear"></div>',
+						'<img class="thumb thumb'+index+'" draggable="false" src="', 
+						e.target.result,
+						'" title="', 
+						escape(theFile.name) + ' ('+bytesToSize(theFile.size)+') ', 
+						'"/>'
+					].join('');
+					document.getElementById('list').insertBefore(span, null);
+					
+					
+					
+					
+					/**
+						1/3 size
+					 */
+					span = document.createElement('div');
+					c = document.createAttribute("class");
+					c.nodeValue = "fotoWrapper";
+					span.setAttributeNode(c);
+					span.innerHTML = [
+						'<div class="pull-right previewWrapper"><img src="'+e.target.result+'" id="preview'+index+'_onethird" /><div style="position:absolute; right:0; top:0; background:#999; width:66%; height:100%;"></div></div><div class="clearfix clear"></div>',
+						'<img class="thumb thumb'+index+'" draggable="false" src="', 
+						e.target.result,
+						'" title="', 
+						escape(theFile.name) + ' ('+bytesToSize(theFile.size)+') ', 
+						'"/>'
+					].join('');
+					document.getElementById('list').insertBefore(span, null);
+					
+					
+					
+					/**
+						2/3 size
+					 */
+					span = document.createElement('div');
+					c = document.createAttribute("class");
+					c.nodeValue = "fotoWrapper";
+					span.setAttributeNode(c);
+					span.innerHTML = [
+						'<div class="pull-right previewWrapper"><img src="'+e.target.result+'" id="preview'+index+'_twothirds" /><div style="position:absolute; right:0; top:0; background:#999; width:33%; height:100%;"></div></div><div class="clearfix clear"></div>',
+						'<img class="thumb thumb'+index+'" draggable="false" src="', 
+						e.target.result,
+						'" title="', 
+						escape(theFile.name) + ' ('+bytesToSize(theFile.size)+') ', 
+						'"/>'
+					].join('');
+					document.getElementById('list').insertBefore(span, null);
+					
+					
+					
+					
+					
 					$('.box-header ul li:eq(1)').trigger('click');
 					
 					
-					if (typeof jcrop_api != 'undefined') {
-						jcrop_api.destroy();
-						jcrop_api = null;
-					}
+					// if (typeof jcrop_api != 'undefined') {
+					// 	jcrop_api.destroy();
+					// 	jcrop_api = null;
+					// }
 					
 					setTimeout(function(){
-						$('.thumb').Jcrop({
-							minSize: [32, 362],
-							//aspectRatio : 1,
-							bgFade: true,
-							bgOpacity: .1,
-							onChange: updateInfo,
-							onSelect: updateInfo,
-							onRelease: clearInfo
-						}, function(){
+						$('.thumb'+index).each(function(i){
+							var self=this;
+							$(self).Jcrop({
+								minSize: [32, 362],
+								//aspectRatio : 1,
+								bgFade: true,
+								bgOpacity: .1
+								// ,boxWidth: 947, 
+								// boxHeight: 722
+								,trueSize:[self.width, self.height]
+							
+								// ,onChange: showPreview,
+								,onSelect: function(coords){
+									showPreview(coords,self,index,$(self).parents('.fotoWrapper').find('.previewWrapper img').attr('id').split('_')[1]);
+								}
+								// onRelease: clearInfo
+							}, function(){
 
-							// use the Jcrop API to get the real image size
-							var bounds = this.getBounds();
-							boundx = bounds[0];
-							boundy = bounds[1];
+								// use the Jcrop API to get the real image size
+								// var bounds = this.getBounds();
+								// boundx = bounds[0];
+								// boundy = bounds[1];
 
-							// Store the Jcrop API in the jcrop_api variable
-							jcrop_api = this;
+								// Store the Jcrop API in the jcrop_api variable
+								// jcrop_api = this;
+								jcrop_api.push(this);
+							});
 						});
 					},1000);
 				};
-			})(f);
+			})(f,i);
 			reader.readAsDataURL(f);
 			//reader.readAsBinaryString(f);
 		}
@@ -411,10 +512,10 @@
 		// 	updateProgress(event);
 		// };
 		// oXHR.upload.onloadstart = function(event) {};
+				
+		vFD.append('jcrop_api', jcrop_api);
 		
-		if(file) vFD.append('myfile', file);
-		
-	    oXHR.open('POST', 'url');
+	    oXHR.open('POST', document.getElementById('upload_form').action);
 	    oXHR.send(vFD);
 	}
 
@@ -424,20 +525,60 @@
 	</script>
 	
 	<script>
-	var jcrop_api, boundx, boundy;
+	var jcrop_api=[], boundx, boundy;
 	
-	function clearInfo() {
-	    $('#w').val('');
-	    $('#h').val('');
+	// function clearInfo() {
+	//     $('#w').val('');
+	//     $('#h').val('');
+	// }
+	// function updateInfo(e) {
+	//     $('#x1').val(e.x);
+	//     $('#y1').val(e.y);
+	//     $('#x2').val(e.x2);
+	//     $('#y2').val(e.y2);
+	//     $('#w').val(e.w);
+	//     $('#h').val(e.h);
+	// }
+	function showPreview(e, img, index,size)
+	{
+		var or={y:90.5};
+		switch(size){		
+		case 'mid':
+			or.x=135.8703375;
+			break;
+		case 'onethird':
+			or.x=90.17325;
+			break;
+		case 'twothirds':
+			or.x=181.49625;
+			break;
+		case 'full':
+		default:
+			or.x=272.655;
+			break;
+		}
+		var rx = or.x / e.w;
+		var ry = or.y / e.h;
+		
+		$('#preview'+index+'_'+size).css({
+			width: Math.round(rx * $(img).width()) + 'px',
+			height: Math.round(ry * $(img).height()) + 'px',
+			marginLeft: '-' + Math.round(rx * e.x) + 'px',
+			marginTop: '-' + Math.round(ry * e.y) + 'px'
+		});
 	}
-	function updateInfo(e) {
-	    $('#x1').val(e.x);
-	    $('#y1').val(e.y);
-	    $('#x2').val(e.x2);
-	    $('#y2').val(e.y2);
-	    $('#w').val(e.w);
-	    $('#h').val(e.h);
-	}
+	
+	$('form').submit(function(e){
+		e.preventDefault();
+		if($('#files').val()){
+			$('.box-header ul li:eq(2)').trigger('click');
+			startUploading();	
+		}		
+	});
+	
+	$('input:button').on('click',function(e){
+		window.location.reload();
+	});
 	</script>
 
 </body>
